# fastsapp-ai-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: config.py  database.py  models.py
app/routes/: health.py  webhook.py
app/services/: ai_service.py  conversation_store.py  entity_extractor.py  intent_classifier.py  sentiment_analyzer.py  summarizer.py  vectorstore.py
tests/: conftest.py  test_ai_service.py  test_conversation_store.py  test_entity_extractor.py  test_intent_classifier.py  test_sentiment_analyzer.py  test_summarizer.py  test_vectorstore.py  test_webhook.py
